--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,3 +26,9 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }*/
+
+img.inline-image {
+  margin-left: 0.5em;
+  height: 1.3em;
+  vertical-align: -0.3em;
+}
